--- a/static/index.html
+++ b/static/index.html
@@ -1,17 +1,31 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Boostrap</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <title>{{name}}</title>
     <!-- Bootstrap CSS v5.0.2 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
   </head>
   <body>
-      
+  <!--
+Copyright (c) 2022 Evolving Software Corporation
+
+This software is released under the MIT License.
+https://opensource.org/licenses/MIT
+-->
+  <h1>{{name}}</h1>
+  <p>Welcome to the Evolving Software Business Management and Growth Platform.</p>
+  <p>We are still currently under development.</p>
+  <p>If you would like to follow our progress submit the form below!</p>
+  <form action='' method='post'>
+    <Label>Enter Your Email For More Information about Us!</Label>
+    <input type='email' name='email' id='email'>
+    <button type='submit'>Submit!</button>
+  </form>
+
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
