--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{{name}}</title>
+    <title>URL Shortener</title>
     <!-- Bootstrap CSS v5.0.2 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
@@ -16,7 +16,7 @@ Copyright (c) 2022 Evolving Software Corporation
 This software is released under the MIT License.
 https://opensource.org/licenses/MIT
 -->
-  <h1>{{name}}</h1>
+  <h1>URL Shortener</h1>
   <p>Welcome to the Evolving Software Business Management and Growth Platform.</p>
   <p>We are still currently under development.</p>
   <p>If you would like to follow our progress submit the form below!</p>
